--- a/widget/css/heard.css
+++ b/widget/css/heard.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: 50px;
     z-index: 999;
-    background-color: #3993cf;
+    background-color: #ffffff;
 }
 
 .header .left {
@@ -22,7 +22,7 @@
 
 .header .t .title {
     font-size: 16px;
-    color: #ffffff;
+    color: #1c1426;
     padding-right: 10px;
     display: inline-block;
     margin: 0 auto;
