--- a/widget/css/special.css
+++ b/widget/css/special.css
@@ -24,7 +24,7 @@ body,.container{
 
 .topic-list .info{
     width: 100%;
-    height: 105px;
+    /*height: 105px;*/
     overflow: hidden;
 }
 
@@ -37,7 +37,8 @@ body,.container{
     color: #333;
     overflow: hidden;
     font-size: 17px;
-    margin-top: 10px;
+    margin-top: 12px;
+    padding: 2px;
 }
 
 .topic-list .desc{
@@ -50,11 +51,9 @@ body,.container{
     _overflow: hidden;
     color: #999;
     font-size: 12px;
-    margin-top: 8px;
-    margin-bottom: 10px;
     margin-left:9px;
     margin-right:15px;
-
+    padding: 5px 0;
 }
 
 .topic-list .price{
@@ -66,6 +65,7 @@ body,.container{
     overflow: hidden;
     color: #b4282d;
     font-size: 13px;
+    padding: 2px;
 }
 
 
