--- a/widget/css/main_p.css
+++ b/widget/css/main_p.css
@@ -34,9 +34,11 @@ body {
 .a-section {
     height: auto;
     /*overflow: hidden;*/
-    background: #fff;
+    background: #f4f4f4;
+    margin: 2px 0;
+    padding-top: 7px;
     color: #333;
-    margin-top: 1px;
+    /*margin-top: 1px;*/
 }
 
 .quan img {
@@ -134,10 +136,15 @@ body {
     display: flex;
     flex-wrap: wrap;
 }
+.x{
+  justify-content: center;
+  align-items: center;
+}
 
 .b .goodlist {
-    width: 49%;
+    width: 47%;
     background: #ffffff;
+    margin: 4px;
 }
 
 .b .goodlist img {
@@ -151,19 +158,28 @@ body {
 .b .goodlist .mt .price {
     color: red;
 }
-
+.a-popular{
+  background: #f4f4f4;
+}
 .a-popular .item {
     width: 100%;
     clear: both;
     overflow: hidden;
     position: relative;
+    margin: 2px 0;
+    background: #fff;
+    padding: 5px 0;
+    padding-left: 10px;
 }
 
 .a-popular .item .img {
     float: left;
     width: 40%;
 }
-
+.l{
+  justify-content: center;
+  align-items: center;
+}
 .a-popular .item .img img {
     width: 100%;
 }
@@ -230,11 +246,8 @@ body {
 .more {
     background: #ffffff;
     height: 184px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    width: 47%;
+    text-align: center;
 }
 
 .more .img {
@@ -242,4 +255,10 @@ body {
     width: 30px;
     height: 30px;
 }
-
+.s{
+  background: #f4f4f4;
+}
+.ss{
+   margin-top: 25%;
+   margin-bottom: 20px;
+}
